Iniciando tela de login

--- a/personalchef/src/app/app.component.html
+++ b/personalchef/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div id="button" >
-  <a routerLink="shared/login" routerLinkActive="selected"><img src="../assets/Vector.svg"/></a>
+  <a routerLink="./shared/login" routerLinkActive="selected"><img src="../assets/Vector.svg"/></a>
 </div>
 <img class="responsive" src="../assets/Rectangle%201.png"/>
