--- a/personalchef/src/app/shared/login/login.component.html
+++ b/personalchef/src/app/shared/login/login.component.html
@@ -1,1 +1,7 @@
-<img src="../../../assets/Personal%20Chef%20Logotipo%20(1)%201.png"/>
+<div class="login-screen">
+  <img class="responsive" src="../../../assets/Personal%20Chef%20Logotipo%20(1)%201.png">
+  <button class="sign-in "color="primary" mat-flat-button>Sign-in</button>
+  <button class="sign-up" color="primary" mat-flat-button>Sign-up</button>
+</div>
+
+<hr>
