--- a/personalchef/src/app/app.component.html
+++ b/personalchef/src/app/app.component.html
@@ -1,5 +1,88 @@
-<div id="button" >
-  <a routerLink="./shared/login" routerLinkActive="selected"><img src="../assets/Vector.svg"/></a>
-</div>
-<img class="responsive" src="../assets/Rectangle%201.png"/>
+<header>
+  <img src="../assets/Rectangle%202(1).png"/>
+  <div class="botoes">
+    <button mat-flat-button class="criar-conta">criar conta</button>
+    <button mat-flat-button class="entrar">Entrar</button>
+  </div>
+</header>
 
+
+<div class="rectangle">
+  <div class="conteudo">
+    <div class="texto">
+      <h1>As melhores lembranças</h1>
+      <h1>são feitas de: Boa comida,</h1>
+      <h1>bons amigos e bons momentos</h1>
+    </div>
+    <img src="../assets/Rectangle%2010.png"/>
+  </div>
+</div>
+
+<div class="find-bar">
+  <mat-form-field appearance="outline" class="bar">
+    <mat-icon matSuffix>search</mat-icon>
+    <input type="search"  matInput placeholder="O site que conecta chefs a quem busca comida requintada e artesanal" required>
+  </mat-form-field>
+</div>
+
+<div class="titulo">
+  <h1>Categorias</h1>
+</div>
+<hr>
+
+<section class="categorias">
+  <div class="categoria">
+    <div class="cinza">
+      <img src="assets/coffee-cup%201.svg"/>
+    </div>
+    <p>Drink</p>
+  </div>
+  <div class="categoria">
+    <div class="cinza">
+      <img src="assets/image%201(1).png"/>
+    </div>
+    <p>Almoço</p>
+  </div>
+  <div class="categoria">
+    <div class="cinza">
+      <img src="assets/Vector_2.png"/>
+    </div>
+    <p>Aniversários</p>
+  </div>
+  <div class="categoria">
+    <div class="rosa">
+      <img src="assets/mesa-de-jantar%20(2)%201.png"/>
+    </div>
+    <p>Jantar</p>
+  </div>
+  <div class="categoria">
+    <div class="cinza">
+      <img src="assets/coffee-cup%201.svg"/>
+    </div>
+    <p>Churrasco</p>
+  </div>
+  <div class="categoria">
+    <div class="cinza">
+      <img src="assets/coffee-cup%201.svg"/>
+    </div>
+    <p>Comidas Tipicas</p>
+  </div>
+  <div class="categoria" >
+    <div class="cinza">
+      <img src="assets/coffee-cup%201.svg"/>
+    </div>
+    <p>Coffe Break</p>
+  </div>
+  <div class="categoria" >
+    <div class="cinza">
+      <img src="assets/coffee-cup%201.svg"/>
+    </div>
+    <p>Natal e Ano Novo</p>
+  </div>
+</section>
+
+
+<footer>
+  <p>Todos os direitos reservados - Laís Lima,</p>
+  <p>Manuel Maia, Pedro Gabriel</p>
+</footer>
